Incorrect mouse handling for viewpoint with Qt DirectComposition video integration
Clicking in the embedded video makes the viewpoint rotate, no issue on Windows with external window.
See attached video for demo.
Clicking in the embedded video makes the viewpoint rotate, no issue on Windows with external window.
See attached video for demo.
added Component::Interface: Qt label
added Platform::Windows desktop label
marked #25629 (closed) as a duplicate of this issue
marked this issue as related to #25629 (closed)
mentioned in issue #26799 (closed)
mentioned in merge request !1733 (merged)
closed with commit 02fcb4a0
closed with merge request !1733 (merged)
added Status::fixed label
changed milestone to %4.0
VideoLAN code repository instance