qt: remove incorrect mouse event scaling

Since commit 66e86e159eb18b151a5deab0c07775477c3dd197, m_sourceSize is
never written, and no scaling must be applied.

This makes hoverMoveEvent() consistent with mouseMoveEvent(), which did
not apply any scaling.

Fixes #25385
Fixes #26799